feat(forge-1.20): 更新客户端以支持 1.20 版本的 KnotLink SDK，修复相关 API 兼容性问题